--- a/environment.yml
+++ b/environment.yml
@@ -150,5 +150,12 @@ dependencies:
   - zipp=3.17.0=pyhd8ed1ab_0
   - zstd=1.5.5=h4f39d0f_0
   - pip:
+      - contourpy==1.2.1
+      - cycler==0.12.1
+      - fonttools==4.51.0
+      - kiwisolver==1.4.5
+      - matplotlib==3.8.4
+      - pillow==10.3.0
+      - pyparsing==3.1.2
       - vulture==2.11
 prefix: /Users/jv/anaconda3/envs/G10_RV
