Update neural network model architecture and results

--- a/environment.yml
+++ b/environment.yml
@@ -1,4 +1,4 @@
-name: G10_RV
+name: neural_network
 channels:
   - anaconda
   - conda-forge
@@ -12,17 +12,15 @@ dependencies:
   - astunparse=1.6.3=pyhd8ed1ab_0
   - attrs=23.2.0=pyh71513ae_0
   - backcall=0.2.0=pyhd3eb1b0_0
-  - blas=1.0=openblas
   - blinker=1.7.0=pyhd8ed1ab_0
-  - bottleneck=1.3.7=py311hb9f6ed7_0
   - brotli-python=1.1.0=py311ha891d26_1
   - bzip2=1.0.8=h93a5062_5
   - c-ares=1.28.1=h93a5062_0
-  - ca-certificates=2024.3.11=hca03da5_0
+  - ca-certificates=2023.08.22=hca03da5_0
   - cached-property=1.5.2=hd8ed1ab_1
   - cached_property=1.5.2=pyha770c72_1
   - cachetools=5.3.3=pyhd8ed1ab_0
-  - certifi=2024.2.2=py311hca03da5_0
+  - certifi=2023.11.17=py311hca03da5_0
   - cffi=1.16.0=py311h4a08483_0
   - charset-normalizer=3.3.2=pyhd8ed1ab_0
   - click=8.1.7=unix_pyh707e725_0
@@ -42,12 +40,11 @@ dependencies:
   - h5py=3.11.0=nompi_py311hd00467f_100
   - hdf5=1.14.3=nompi_h5bb55e9_100
   - icu=73.2=hc8870d7_0
-  - idna=3.6=pyhd8ed1ab_0
+  - idna=3.7=pyhd8ed1ab_0
   - importlib-metadata=7.1.0=pyha770c72_0
   - ipykernel=6.25.0=py311hb6e6a13_0
   - ipython=8.15.0=py311hca03da5_0
   - jedi=0.18.1=py311hca03da5_1
-  - joblib=1.2.0=py311hca03da5_0
   - jupyter_client=8.6.0=py311hca03da5_0
   - jupyter_core=5.5.0=py311hca03da5_0
   - keras=2.15.0=pyhd8ed1ab_0
@@ -73,7 +70,7 @@ dependencies:
   - libprotobuf=4.24.4=h810fc01_0
   - libre2-11=2023.09.01=h741fcf5_1
   - libsodium=1.0.18=h1a28f6b_0
-  - libsqlite=3.45.2=h091b4b1_0
+  - libsqlite=3.45.3=h091b4b1_0
   - libssh2=1.11.0=h7a5bd25_0
   - libzlib=1.2.13=h53f4e23_5
   - llvm-openmp=18.1.3=hcd81f8e_0
@@ -84,13 +81,11 @@ dependencies:
   - multidict=6.0.5=py311he2be06e_0
   - ncurses=6.4.20240210=h078ce10_0
   - nest-asyncio=1.5.6=py311hca03da5_0
-  - numexpr=2.8.7=py311h6dc990b_0
   - numpy=1.26.4=py311h7125741_0
   - oauthlib=3.2.2=pyhd8ed1ab_0
   - openssl=3.2.1=h0d3ecfb_1
   - opt_einsum=3.3.0=pyhc1e730c_2
   - packaging=24.0=pyhd8ed1ab_0
-  - pandas=2.2.1=py311h7aedaa7_0
   - parso=0.8.3=pyhd3eb1b0_0
   - pexpect=4.8.0=pyhd3eb1b0_3
   - pickleshare=0.7.5=pyhd3eb1b0_1003
@@ -101,8 +96,8 @@ dependencies:
   - psutil=5.9.0=py311h80987f9_0
   - ptyprocess=0.7.0=pyhd3eb1b0_2
   - pure_eval=0.2.2=pyhd3eb1b0_0
-  - pyasn1=0.5.1=pyhd8ed1ab_0
-  - pyasn1-modules=0.3.0=pyhd8ed1ab_0
+  - pyasn1=0.6.0=pyhd8ed1ab_0
+  - pyasn1-modules=0.4.0=pyhd8ed1ab_0
   - pycparser=2.22=pyhd8ed1ab_0
   - pygments=2.15.1=py311hca03da5_1
   - pyjwt=2.8.0=pyhd8ed1ab_1
@@ -111,9 +106,7 @@ dependencies:
   - python=3.11.8=hdf0ec26_0_cpython
   - python-dateutil=2.8.2=pyhd3eb1b0_0
   - python-flatbuffers=24.3.25=pyh59ac667_0
-  - python-tzdata=2023.3=pyhd3eb1b0_0
   - python_abi=3.11=4_cp311
-  - pytz=2023.3.post1=py311hca03da5_0
   - pyu2f=0.1.5=pyhd8ed1ab_0
   - pyzmq=25.1.0=py311h313beb8_0
   - re2=2023.09.01=h4cba328_1
@@ -121,8 +114,6 @@ dependencies:
   - requests=2.31.0=pyhd8ed1ab_0
   - requests-oauthlib=2.0.0=pyhd8ed1ab_0
   - rsa=4.9=pyhd8ed1ab_0
-  - scikit-learn=1.2.2=py311h313beb8_1
-  - scipy=1.12.0=py311hc76d9b0_0
   - setuptools=69.5.1=pyhd8ed1ab_0
   - six=1.16.0=pyh6c4a22f_0
   - snappy=1.1.10=hd04f947_1
@@ -133,12 +124,10 @@ dependencies:
   - tensorflow-base=2.15.0=cpu_py311he034567_2
   - tensorflow-estimator=2.15.0=cpu_py311hcceb7c1_2
   - termcolor=2.4.0=pyhd8ed1ab_0
-  - threadpoolctl=2.2.0=pyh0d69192_0
   - tk=8.6.13=h5083fa2_1
   - tornado=6.3.3=py311h80987f9_0
   - traitlets=5.7.1=py311hca03da5_0
   - typing_extensions=4.11.0=pyha770c72_0
-  - tzdata=2024a=h0c530f3_0
   - urllib3=2.2.1=pyhd8ed1ab_0
   - wcwidth=0.2.5=pyhd3eb1b0_0
   - werkzeug=3.0.2=pyhd8ed1ab_0
@@ -152,10 +141,18 @@ dependencies:
   - pip:
       - contourpy==1.2.1
       - cycler==0.12.1
+      - et-xmlfile==1.1.0
       - fonttools==4.51.0
+      - joblib==1.4.0
       - kiwisolver==1.4.5
       - matplotlib==3.8.4
+      - openpyxl==3.1.2
+      - pandas==2.2.2
       - pillow==10.3.0
       - pyparsing==3.1.2
-      - vulture==2.11
-prefix: /Users/jv/anaconda3/envs/G10_RV
+      - pytz==2024.1
+      - scikit-learn==1.4.2
+      - scipy==1.13.0
+      - threadpoolctl==3.4.0
+      - tzdata==2024.1
+prefix: /Users/jv/anaconda3/envs/neural_network
